lab1/Test/L1-A-10-26.output
Error Type B at Line 5
Error Type A at Line 10
Error Type A at Line 13
Error Type B at Line 41
