lab1/Test/L1-A-10-26.cmm
float xDQiTSHivY92XPo3u2j ( ) {
}
struct sQWeMaz i5TYy9q4KF 
;
int wmzkM6ncbPiVX3EdKZpn ( int bRulNhcGrHwU struct 
  , struct {
}V ) {
  struct d9 T985PouJR ;
  struct RXROTuni2 {
  }r6Wv6MzrwatVOq1qN '= UDzRAm2q47OhMDc , _Y_IypbhL3Jt7C3 
    [ 113180275 ] ;
  return mRzL2ADpAv = n || UDGwg3qvN9W && v0jS2Afj8B 
    < yC2f0 + PT9fjc / \- ! ( zZYkOXaKMDt = M6gU0iYlEM7VvJq1N 
    != qokH2epxs1 - - C7HeZzv0itkhlb ( lEXVoDoL , yg34M4Zoj7 
    = JnPiMJ && fEqs_yLTbN > MvhyCrQ5J [ gsaNJQa8rModuu 
    = _g3J = xBTjCzYIfMC66kIW <= WCZ1pAxDR + ! n5MoIkQByL_3VElty 
    ( mxsWjWfpn >= lKvz5JpefF - gjKI0fO1ZGV3o0z * I5uSVJ4ARtMq_qA 
    ( OGPmz2lk0J5eAizRPpu , QISzWlpbO9l78igXEHc && nPsSPdOGQwzf9ARydNOM 
    == IuziGg3 - X4BX25 [ GLvPv >= ! 653131335 != - saIQ4uygakT5jKCyE 
    ] ) ) * UGsUStsnpRs2bOTOq ( 854853615.1476681011 ) 
    ] ) * - ciUOcbtDg ( ) ) . Y9Z ;
}
int ;
int ;
int kz ( ) {
  U6bFdixy ;
  ARE39e ;
  Woblfu ;
  rdVVqsaY04 ;
  aPvsNcfH9qd ;
  if ( xobaun2jFHPHLFy )   aXdZ7BEufKRQa5X ;
else   while ( S2MSjYRfFA8kFCv9Z )   aF4jEkjS ;


  if ( GSe )   H_T7E ;
else   if ( rrXuc8 )   if ( R4uy0L3eNi1cS ) {
  }


}
int > feMgJIseGhU4XKKz0 , J 

;
int ;
